# DetectAndTrack

./: CMakeLists.txt  README.md  mavsdk_utils.hpp  model.hpp  run.bat  track_utils.hpp
Dependencies/lib/: mavsdk.lib  mavsdk_action.lib  mavsdk_action_server.lib  mavsdk_calibration.lib  mavsdk_camera.lib  mavsdk_failure.lib  mavsdk_follow_me.lib  mavsdk_ftp.lib  mavsdk_geofence.lib  mavsdk_gimbal.lib  mavsdk_info.lib  mavsdk_log_files.lib  mavsdk_manual_control.lib  mavsdk_mavlink_passthrough.lib  mavsdk_mission.lib  mavsdk_mission_raw.lib  mavsdk_mission_raw_server.lib  mavsdk_mocap.lib  mavsdk_offboard.lib  mavsdk_param.lib  mavsdk_param_server.lib  mavsdk_server_utility.lib  mavsdk_shell.lib  mavsdk_telemetry.lib  mavsdk_telemetry_server.lib  mavsdk_tracking_server.lib  mavsdk_transponder.lib  mavsdk_tune.lib
Dependencies/lib/cmake/MAVSDK/: MAVSDKConfigVersion.cmake  MAVSDKTargets-release.cmake  MAVSDKTargets.cmake
Detect_and_Track/: Detect_and_Track.vcxproj  Detect_and_Track.vcxproj.filters  Tracker.cpp  mavsdk_utils.cpp  model.hpp  track_utils.hpp
linux/: CMakeLists.txt  Tracker.cpp  common.hpp  model.hpp  model_common.hpp  modelv4.hpp  modelv5.hpp  track_utils.hpp  utils.hpp
vs19/: run.bat
vs19/Detect_and_Track/: Detect_and_Track.vcxproj  Detect_and_Track.vcxproj.filters  Tracker.cpp  model.hpp  track_utils.hpp
